Fix content z-index and change from translateZ to translate3d

--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@
       background: #ededed;
       position: relative;
       z-index: 2;
-      -webkit-transform:translateZ(2px);
-      -moz-transform:translateZ(2px);
-      -o-transform:translateZ(2px);
-      transform:translateZ(2px);
+      -webkit-transform: translate3d(0,0,3px);
+      -moz-transform: translate3d(0,0,3px);
+      -o-transform: translate3d(0,0,3px);
+      transform: translate3d(0,0,3px);
     }
 
     h1{
@@ -118,6 +118,10 @@
 
     .toolbar-content-container {
         z-index: 0;
+        -webkit-transform: translate3d(0,0,1px);
+        -moz-transform: translate3d(0,0,1px);
+        -o-transform: translate3d(0,0,1px);
+        transform: translate3d(0,0,1px);
         height: 250px;
         width: 100%;
         margin-top: 180px;
